<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="connection_param_file">connectParam</string>
    <string name="app_name">TTTS PVN Systems</string>
    <string name="menu_settings">Settings</string>
    <string name="select">Select</string>
    <string name="restart">Restart</string>
    <string name="begin">Begin</string>
    <string name="exit">Quit</string>
    <string name="start_feed">Start Feed</string>
    <string name="stop_feed">Stop Feed</string>
    <string name="help">Help</string>
    <string name="chronometer">Chronometer</string>
    <string name="chronometer_initial_format">Elapsed Time: %s</string>
    <string name="ok_button">OK</string>
    <string name="connection_string">192.168.1.4:6969</string>
    <string name="connection_dialog_title">Connection String</string>
    <string name="connection_string_message">Please enter IP and Port:</string>
    <string name="feed">Feed</string>
    <string name="strategy">Strategy</string>
    
    <color name="green">#306754</color>
    <color name="grey">#199119</color>
    <color name="black">#000000</color>
    <color name="white">#ffffff</color>
    <color name="yellow">#ffff00</color>

</resources>