<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/connection_parameter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/connection_string"
        android:inputType="textCapWords"
        android:maxLength="25" />

    <RadioGroup android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
		    <RadioButton
		        android:id="@+id/feed_rb"
		        android:layout_width="158dp"
		        android:layout_height="wrap_content"
		        android:checked="true"
		        android:text="@string/feed" />
		
		    <RadioButton
		        android:id="@+id/strategy_rb"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/strategy" />
	 </RadioGroup>

</LinearLayout>